@startuml
class LeaderboardController {
    +getLeaderboard()
}

class EvaluationReportServiceImpl {
    +generateLeaderboard()
}

class EvaluationResultRepository {
    +findAll()
}

LeaderboardController --> EvaluationReportServiceImpl
EvaluationReportServiceImpl --> EvaluationResultRepository
@enduml
